--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,29 @@
 ######################################################################
 #  BenchMate backend image (FastAPI + bio libs)
-#  • Based on the slim Python 3.12 image to keep size down
-#  • Installs system libs needed by core scientific packages
-#  • Copies the backend code into /app and sets uvicorn as entrypoint
+#  • Context root is the backend/ folder
+#  • Installs minimal system libs for Python scientific packages
+#  • Copies requirements and code from the current context into /app
 ######################################################################
 FROM python:3.12-slim
 
-# -- System dependencies (minimal set for now) -----------------------
+# --- System dependencies --------------------------------------------
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
        build-essential \
        libgomp1 \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# -- Python dependencies ---------------------------------------------
-COPY backend/requirements_biology.txt /tmp/requirements.txt
+# --- Python dependencies --------------------------------------------
+# Context root contains requirements_biology.txt directly
+COPY requirements_biology.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
-# -- Project source ---------------------------------------------------
+# --- Application code -----------------------------------------------
 WORKDIR /app
-COPY backend/ /app
+# Copy everything from the backend/ folder into /app
+COPY . /app
 
-# -- Default command --------------------------------------------------
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# --- Default startup command ----------------------------------------
+# main.py must expose FastAPI app as 'app'
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
