--- a/frontend/benchtop/package.json
+++ b/frontend/benchtop/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^3.0.1"
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider&&react-scripts start",
     "build": "react-scripts build",
-    "test":  "react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "ansi-regex": "^6.0.1"
   }
 }
