--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,8 @@ jobs:
           pip install -r backend/requirements_biology.txt pytest
 
       - name: Run pytest
+        env:
+          PYTHONPATH: ./backend
         run: |
           pytest -q --disable-warnings --maxfail=1
 
