--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,8 @@ jobs:
   backend:
     name: Backend Tests
     runs-on: ubuntu-latest
+    env:
+        PYTHONPATH: ${{ github.workspace }}/backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,8 +29,7 @@ jobs:
           pip install -r backend/requirements_biology.txt pytest
 
       - name: Run pytest
-        run: |
-          pytest -q --disable-warnings --maxfail=1
+        run: pytest -q --disable-warnings --maxfail=1
 
   frontend:
     name: Frontend Build
