--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yaml
 name: CI
 
 on:
@@ -11,8 +10,10 @@ jobs:
   backend:
     name: Backend Tests
     runs-on: ubuntu-latest
+
     env:
-        PYTHONPATH: ${{ github.workspace }}/backend
+      PYTHONPATH: ${{ github.workspace }}/backend
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,15 +26,16 @@ jobs:
       - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
-          # Install both your biology libs and the test runner
           pip install -r backend/requirements_biology.txt pytest
 
       - name: Run pytest
-        run: pytest -q --disable-warnings --maxfail=1
+        run: |
+          pytest -q --disable-warnings --maxfail=1
 
   frontend:
     name: Frontend Build
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
