--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,25 +12,19 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PYTHONPATH: ${{ github.workspace }}/backend
+      PYTHONPATH: ${{ github.workspace }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.12'
-
-      - name: Install backend dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements_biology.txt pytest
-
-      - name: Run pytest
-        run: |
-          pytest -q --disable-warnings --maxfail=1
+      - name: Run tests
+        run: pytest -q --disable-warnings --maxfail=1
 
   frontend:
     name: Frontend Build
