--- a/frontend/benchtop/package.json
+++ b/frontend/benchtop/package.json
@@ -2,28 +2,26 @@
   "name": "benchtop",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
+    "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
-
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,7 +34,6 @@
       "last 1 safari version"
     ]
   },
-
   "overrides": {
     "ansi-regex": "^5.0.1",
     "nth-check": "^2.0.1",
