--- a/frontend/benchtop-nextjs/package.json
+++ b/frontend/benchtop-nextjs/package.json
@@ -24,6 +24,7 @@
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "plotly.js-basic-dist-min": "^3.0.1",
+    "plotly.js-dist-min": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-plotly.js": "^2.6.0",
